# federated-lightweight-chat

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: cd.yml  ci.yml
scripts/: check.sh  local_deploy.sh  test_api.sh  test_storage.sh
src/: main.py
src/api/: dependencies.py  routes.py
src/config/: settings.py
src/core/: auth_models.py  message.py  node.py  node_state.py  vector_clock.py
src/services/: auth.py  gossip.py  node.py  storage.py  websocket.py
src/static/: index.html
src/static/css/: input.css  style.css
src/static/js/: api.js  app.js
tests/: test_anti_entropy.py  test_api_routes.py  test_dummy_auth_provider.py  test_gossip_service.py  test_gui_serving.py  test_node_service.py  test_node_state.py  test_room_logic.py  test_storage.py  test_vector_clock.py  test_websocket.py
