[project]
name = "federated-lightweight-chat"
version = "0.1.0"
description = "A simple distrbuted chat system, with rooms (topics) and minimal chatting features"
authors = [
    {name = "Alessandro Monticelli",email = "alessandr.monticell4@studio.unibo.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.109.0)",
    "uvicorn[standard] (>=0.27.0)",
    "pydantic (>=2.6.0)",
    "httpx (>=0.26.0)",
    "python-multipart (>=0.0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
