[project]
name = "federated-lightweight-chat"
version = "0.1.0"
description = "A simple distributed chat system, with rooms (topics) and minimal chatting features"
authors = [
    {name = "Alessandro Monticelli", email = "alessandr.monticell4@studio.unibo.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
# Main runtime dependencies
dependencies = [
    "fastapi (>=0.109.0)",
    "uvicorn[standard] (>=0.27.0)",
    "pydantic (>=2.6.0)",
    "httpx (>=0.26.0)",
    "python-multipart (>=0.0.9)",
    "pydantic-settings (>=2.2.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "redis (>=7.1.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# --- DEVELOPMENT DEPENDENCIES ---
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
bandit = "^1.7.0"
httpx = "^0.26.0"
watchdog = "^4.0.0" 

# --- TOOL CONFIGURATION ---

[tool.black]
line-length = 110
# UPDATED: Target version for Black formatting
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "R0903", # Too few public methods (common in Pydantic models)
    "E0401", # Import errors (let MyPy handle this)
]
max-line-length = 110

[tool.pylint.format]
max-line-length = 110

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.report]
exclude_lines = [
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
